<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margen"
    android:background="@color/white"
    >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_marginTop="@dimen/margen_muygran"
                    android:layout_marginBottom="@dimen/margen_muygran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/flash_cards_hp_logo"
                    android:layout_gravity="center"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/margen"
                    android:layout_marginBottom="@dimen/margen_gran"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/version"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/titulo_card_med"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/nombre"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/titulo_card"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/copy"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/subtitulo_card"
                        />



                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_muygran"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/acerca_de"
                        android:textColor="@color/button_grey"
                        android:textSize="@dimen/subtitulo_card"
                        android:textStyle="italic"
                        />
                </LinearLayout>


            </LinearLayout>

        </ScrollView>


</LinearLayout>