<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/alto_card"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/margen"
    android:layout_marginLeft="@dimen/margen"
    android:layout_marginRight="@dimen/margen"
    android:foreground="?attr/selectableItemBackground">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_peq"
        android:background="@drawable/card"
        >
        <ImageView
            android:id="@+id/adjetivo_card_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alto_imagecard"
            android:layout_margin="@dimen/margen_peq"
            android:src="@drawable/adjetivo_beautiful_ugly"
            />
        <TextView
            android:id="@+id/adjetivo_card_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_gran"
            android:layout_marginLeft="@dimen/margen_gran"
            android:text="@string/word_adjetivo1"
            android:textColor="@color/colorAccent"
            android:layout_alignTop="@+id/animal_card_image"
            android:textSize="@dimen/titulo_card_med"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:id="@+id/adjetivo_card_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_gran"
            android:layout_marginRight="@dimen/margen_gran"
            android:text="@string/word_adjetivo2"
            android:textColor="@color/colorAccent"
            android:layout_alignTop="@+id/animal_card_image"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/titulo_card_med"
            />

        <TextView
            android:id="@+id/adjetivo1_card_text"
            android:layout_below="@+id/adjetivo_card_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margen_gran"
            android:text="@string/word_adjetivo1esp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/subtitulo_card"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:id="@+id/adjetivo2_card_text"
            android:layout_below="@+id/adjetivo_card_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margen_gran"
            android:text="@string/word_adjetivo2esp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/subtitulo_card"
            android:layout_alignParentRight="true"
            />

        <ImageButton
            android:id="@+id/adjetivo1_boton_play"
            android:layout_width="@dimen/boton_peq"
            android:layout_height="@dimen/boton_peq"
            android:layout_marginLeft="@dimen/margen_gran"
            android:layout_marginBottom="@dimen/margen_gran"
            android:background="@drawable/boton"
            android:src="@drawable/ic_volume"
            android:layout_alignBottom="@+id/adjetivo_card_image"
            android:layout_alignParentLeft="true"
            android:tint="@color/medium_grey"
            />

        <ImageButton
            android:id="@+id/adjetivo2_boton_play"
            android:layout_width="@dimen/boton_peq"
            android:layout_height="@dimen/boton_peq"
            android:layout_marginRight="@dimen/margen_gran"
            android:layout_marginBottom="@dimen/margen_gran"
            android:background="@drawable/boton"
            android:src="@drawable/ic_volume"
            android:layout_alignBottom="@+id/adjetivo_card_image"
            android:layout_alignParentRight="true"
            android:tint="@color/medium_grey"
            />

    </RelativeLayout>
</android.support.v7.widget.CardView>